--- a/assets/guestbook.html
+++ b/assets/guestbook.html
@@ -8,6 +8,7 @@
     bootstrap.min.css">
     <link rel="stylesheet"  type="text/css" href="PerWebCSS.css" />
     <link rel="stylesheet" href="/guestbook.css">
+    <script> src="g" </script>
   </head>
   <body>
         <section>
