--- a/assets/contact.html
+++ b/assets/contact.html
@@ -3,21 +3,32 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <title>Elizabeth Pisarek</title>
     <link rel="stylesheet"  type="text/css" href="PerWebCSS.css" />
   </head>
   <body>
-      <div id="bg">
-            
-          <nav class="navbar">
-            <ul>
-              <li><a href="home.html">HOME</a></li>
-              <li><a href="about.html">ABOUT</a></li>
-              <li><a href="contact.html">CONTACT</a></li>
-              <li><a href="guestbook.html">GUESTBOOK</a></li>
-            </ul>
-          </nav>
-        </div>
+      <nav class="navbar navbar-expand-sm bg-light">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">CONTACT</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="index">GUESTBOOK</a>
+              </li>
+          </ul>
+        </nav>
+        <br>
      <div id="chat">
         <h2><strong>Want to chat? Contact me here!</strong></h2>
         <form>
@@ -34,8 +45,5 @@
       <a href = "https://bitbucket.org/lizpisarek2/my-projects" target="_blank"><img alt="BitBucket" src="bitbucket.png" width="40" height="70"></a>
       <a href = "https://gitlab.nwmissouri.edu/dashboard/projects" target="_blank"><img alt="LinkedIn" src="linkedin.png" width="40" height="70"></a></p>
     </div>
-      <footer>
-        <strong>Copyright &copy; 2018 Elizabeth Pisarek</strong>
-      </footer>
   </body>
   </html>
